--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
 
-        <!-- Bootstrap CSS v5.2.1 
+        <!-- Bootstrap CSS v5.2.1--> 
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
-        />-->
+        />
     </head>
 
     <body>
@@ -23,7 +23,39 @@
             <!-- place navbar here -->
         </header>
         <main>
-            
+            <div class="container">
+                <div class="row">
+                    <!--Primer columna "Por Hacer"-->
+                    <div class="col-md-4">
+                        <div class="p-3 text-center border bg-light">
+                            <h1>Por hacer</h1>
+                        </div>
+                        <div id="PorHacerContenido">
+                            
+                        </div>
+                    </div>
+
+                    <!--Segunda columna "En Proceso"-->
+                    <div class="col-md-4">
+                        <div class="p-3 text-center border bg-light">
+                            <h1>En proceso</h1>
+                        </div>
+                        <div class="EnProcesoContenido">
+
+                        </div>
+                    </div>  
+
+                    <!--Tercer columna "Hecho"-->
+                    <div class="col-md-4">
+                        <div class="p-3 text-center border bg-light">
+                            <h1>Hecho</h1>
+                        </div>
+                        <div class="HechoContenido">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
             <!-- place footer here -->
