--- a/templates/kanban.html
+++ b/templates/kanban.html
@@ -32,6 +32,9 @@
                 </div>
             </div>
 
+            <div id="kanban-board" class="d-flex overflow-auto">
+                
+            </div>
         </main>
         <footer>
             <!-- place footer here -->
@@ -48,5 +51,7 @@
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
         ></script>
+
+
     </body>
 </html>
